--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "lowdb": "^1.0.0",
-    "mongodb": "^3.7.4"
+    "mongodb": "^3.7.4",
+    "vercel": "^34.3.1"
   }
 }
