--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.12.2",
     "lowdb": "^1.0.0",
     "mongodb": "^3.7.4",
+    "mongoose": "^8.5.1",
     "vercel": "^34.3.1"
   }
 }
