fixing attemt nr 10

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lowdb": "^1.0.0",
     "mongodb": "^3.7.4",
     "mongoose": "^8.5.1",
+    "path": "^0.12.7",
     "vercel": "^34.3.1"
   }
 }
